Site Finalizado - Luan e Emanuel

--- a/index.html
+++ b/index.html
@@ -264,7 +264,7 @@
                 <ul class="navbar-nav ms-3 align-items-center">
                     <li class="nav-item"><a class="nav-link" href="#compras">Ofertas</a></li>
                     <li class="nav-item"><a class="nav-link" href="#parcerias">Parcerias</a></li>
-                    <li class="nav-item"><a class="nav-link" href="#localizacao">Lojas</a></li>
+                    <li class="nav-item"><a class="nav-link" href="#localizacao">Localização</a></li>
                     <li class="nav-item ms-2">
                         <a href="#" class="btn btn-outline-light position-relative border-0">
                             <i class="bi bi-cart3 fs-5"></i>
